<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="ok">Aceptar</string>
    <string name="admin_pem_title">Permisos de administrador</string>
    <string name="admin_pem_info">" Esta aplicación requiere de permisos de administrador a todos los dispositivos excepto el del tutor. \n \n Estos permisos permiten: \n \n • Bloquear el dispositivo. \n \n • Evitar que la aplicación se desinstala sin permiso "</string>
    <string name="admin_pem_intent">Dar permisos de administrador a esta aplicación permite lo siguiente:</string>
    <string name="accessibility_pem_title">Permisos de accesibilidad</string>
    <string name="accessibility_pem_info" tools:ignore="Typos">" Esta aplicación requiere de permisos de accesibilidad a todos los dispositivos excepto el del tutor. \n \n Estos permisos permiten: \n \n • Bloquear aplicaciones. \n \n • Detectar actividad al momento. "</string>
    <string name="appusage_pem_title">Permisos de uso de datos</string>
    <string name="appusage_pem_info">" Esta aplicación requiere de permisos de uso de datos a todos los dispositivos excepto el del tutor. \n \n Estos permisos permiten: \n \n • Extraer información de las aplicaciones. "</string>
    <string name="device_admin" translatable="false">AdicTIC Device Admin</string>
    <string name="device_admin_description">AdicTIC necesita permisos de administrador para evitar que se desinstale la aplicación, y poder bloquear el dispositivo cuando se requiera.</string>
    <string name="adictic" translatable="false">AdicTIC</string>
    <string name="last_time_used">Abierta última vez:</string>
    <string name="times_opened">Veces que se ha usado:</string>
    <string name="time_span">Tiempo de uso:</string>
    <string name="lastXDays">Ver actividad de los últimos:</string>
    <string name="alfabeticament">Alfabéticamente</string>
    <string name="display_order_text">Ordenado por:</string>
    <string name="total_use">Tiempo total:</string>
    <string name="days">"días"</string>
    <string name="minutes">"minutos"</string>
    <string name="days_tag">"d"</string>
    <string name="hours_tag">"h"</string>
    <string name="minutes_tag">"m"</string>
    <string name="block_app">Bloqueada</string>
    <string name="block_warning">Esta aplicación está bloqueada</string>
    <string name="sortir">Salir</string>
    <string name="username">Nombre de usuario:</string>
    <string name="password">Contraseña:</string>
    <string name="password2">Repite la contraseña:</string>
    <string name="email">Correo electrónico:</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correo electronico</string>
    <string name="no_user">No tienes usuario?</string>
    <string name="have_account">Ya tienes cuenta?</string>
    <string name="register">Registrate</string>
    <string name="go_login">Iniciar sesión</string>
    <string name="tipus">Este dispositivo es de:</string>
    <string name="tutor">Padre / Madre / Tutor</string>
    <string name="tutelat">Adolescente</string>
    <string name="login">Iniciar \nSesión</string>
    <string name="hint_nomDisp">Nombre del usuario del dispositivo</string>
    <string name="title_activity_splash_screen" translatable="false">AdicTIC</string>
    <string name="good_register">Registro correcto!</string>
    <string name="error_noDeviceName">Campo del nombre de usuario vacío.</string>
    <string name="error_noTipus">Campo de tipo de dispositivo vacío.</string>
    <string name="error_noValidEmail">Formato de correo no válido.</string>
    <string name="error_noPwMatch">Las contraseñas no son iguales.</string>
    <string name="error_noRegister">ERROR: No se ha podido registrar.</string>
    <string name="error_noLogin">ERROR: No se ha encontrado usuario al servidor con los datos entradas.</string>
    <string name="error_noUsername">Escribe un nombre de usuario.</string>
    <string name="error_password">Contraseña no válida.</string>
    <string name="error_noData">No se pudo extraer información del servidor</string>
    <string name="error_dadesBuides">No hay datos en el servidor</string>
    <string name="error_dadesBuides_body">No hay datos en el servidor. Esto ocurre normalmente justo al instalar la aplicación. Entre a la aplicación desde el dispositivo del hijo y acepte todos los permisos antes de volver a intentarlo.</string>
    <string name="the_image_of_the_other_app">The image of the other app.</string>
    <string name="current_names">Los nombres asignados actualmente hasta ahora son:</string>
    <string name="new_name_entry">Entra el nombre del usuario de este dispositivo. Para sustituir uno anterior, entra el mismo nombre.</string>
    <string name="accessibility_service_name" translatable="false">\"Adictic Accessibility Service\"</string>
    <string name="accessibility_service_description">\"Este servicio es utiliza para bloquear aplicaciones\"</string>
    <string name="nomfill_enter">Entrar</string>
    <string name="emptyList">No hay información</string>
    <string name="title_activity_nav" translatable="false">NavActivity</string>
    <string name="menu">MENÚ</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_advice">Asesoramiento</string>
    <string name="menu_help">Ayuda</string>
    <string name="free_time">Uso ilimitado del dispositivo</string>
    <string name="stop_free_time">Parar uso ilimitado</string>
    <string name="block_device">Bloquear dispositivo</string>
    <string name="disconnected">Desconectado</string>
    <string name="informe">Informe mensual</string>
    <string name="informe_mes">Informe del mes: </string>
    <string name="horaris">Momentos libres de tecnologías</string>
    <string name="app_usage">Uso de aplicaciones</string>
    <string name="app_usage_month">Uso mensual de aplicaciones</string>
    <string name="block_apps">Bloqueo de aplicaciones</string>
    <string name="daily_limit_device">Límite diario del dispositivo</string>
    <string name="new_daily_limit_device">Se ha establecido un nuevo límite diario.</string>
    <string name="home_second">Home Second</string>
    <string name="advice_infoContent">Contenido informativo</string>
    <string name="advice_mostAskQuest">Preguntas frecuentes</string>
    <string name="advice_recommendations">Recomendaciones</string>
    <string name="advice_onlineChat">Chat online</string>
    <string name="advice_privateConsult">Consulta privada</string>
    <string name="advice_OurCenters">Nuestros centros</string>
    <string name="forgetPassword"><u> Has olvidado tu contraseña? </u></string>
    <string name="logout">Cerrar Sesión</string>
    <string name="chip_single_date">Una sola fecha</string>
    <string name="chip_range_dates">Entre dos fechas</string>
    <string name="date">Fecha:</string>
    <string name="initial_date">Fecha inicial:</string>
    <string name="final_date">Fecha final:</string>
    <string name="date_format" translatable="false">"%d  %s  %d"</string>
    <string name="daily_usage">Uso diario del dispositivo</string>
    <string name="device_usage">Uso total del dispositivo:</string>
    <string name="press_pie_chart">Pulsa en la gráfica para saber más información.</string>
    <string name="hours_minutes">"%d h. %d m."</string>
    <string name="hrs">"%d h."</string>
    <string name="hours_endl_minutes">"%d h.\n%d min."</string>
    <string name="mins">"%d min."</string>
    <string name="comp">"%s / %s"</string>
    <string name="percentage">"%d%%"</string>
    <string name="informal_date_format">"%d-%d-%d"</string>
    <string name="percentage_info_bo">
        <![CDATA[
            Este usuario ha utilizado el dispositivo %s durante este mes. Teniendo en cuenta que las horas diarias recomendadas para su edad son de %s, ha estado un <font color="#3c9df8"><b>%s%%</b></font> del tiempo recomendado utilizándolo. <b>Enhorabuena, seguid así!</b>
        ]]>
    </string>
    <string name="percentage_info_dolent">
        <![CDATA[
            Este usuario ha utilizado el dispositivo %s durante este mes. Teniendo en cuenta que las horas diarias recomendadas para su edad son de %s, ha estado un <font color="#F44336"><b>%s%%</b></font> del tiempo recomendado utilizándolo. <b>Alerta: seria conveniente reducir su uso!</b>
        ]]>
    </string>
    <string name="error_liveApp">No se pudo leer la aplicación actual del hijo</string>
    <string name="unblock_device">Desbloquear dispositivo</string>
    <string name="nom_app">Nombre</string>
    <string name="categoria_app">Categoría</string>
    <string name="editar_horari">Editar horarios</string>
    <string name="horari_generic">Genérico</string>
    <string name="horari_diari">Diario</string>
    <string name="horari_setmanal">Semanal</string>
    <string name="horari_intro">Elige las horas que el dispositivo estará activo:</string>
    <string name="horari_actual">El %s va a dormir a las %s\\nEl %s se despierta a las %s</string>
    <string name="error_no_event_name">Escribe un nombre para el evento</string>
    <string name="error_no_event_days">Escoge qué días pasa este evento</string>
    <string name="error_incorrect_times">Escoge una hora final superior a la inicial</string>
    <string name="error_no_fills">Actualmente no tenemos ningún hijo/a registrado.\nPara hacerlo solo falta:\n\n1. Instalar la app AdicTIC al dispositivo móvil de su hijo/a.\n\n2. Iniciar sesión con el mismo usuario y contraseña pero escogiendo \"adolescente\".\n\n3. Disfrutar de las ventajas que os proporciona AdicTIC.</string>
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="weekday">Entre semana</string>
    <string name="weekend">Fin de semana</string>
    <string name="wake_up">Despertar:</string>
    <string name="sleep">Dormir:</string>
    <string name="wake_up_hint">Hora de despertar</string>
    <string name="sleep_hint">Hora de bloquear</string>
    <string name="accept">Aceptar</string>
    <string name="successful_entry">Se ha guardado correctamente!</string>
    <string name="block_now">Bloquear</string>
    <string name="set_limit">Límite diario</string>
    <string name="unlock">Desbloquear</string>
    <string name="search_app_category">Búsqueda por app/categoría</string>
    <string name="per_day">"/dia"</string>
    <string name="other">Otros</string>
    <string name="app_icon">Logo de la app</string>
    <string name="select_apps_lock">Selecciona las aplicaciones que quieres bloquear</string>
    <string name="select_apps_unlock">Selecciona las aplicaciones que quieres desbloquear</string>
    <string name="free_use_activation">Tienes uso ilimitado de este dispositivo</string>
    <string name="cancel">Cancelar</string>
    <string name="escull_dates">Escoge fechas</string>
    <string name="xiaomi_perm_desc">Los dispositivos de Xiaomi requieren de aceptar sus propios permisos para conseguir el buen funcionamiento de la aplicación. Por favor, presione el siguiente botón y, como mínimo, acepte los permisos de:\n\n - Muestra las ventanas emergentes\n\n - Muestra las ventanas emergentes mientras se ejecuta en segundo plano\n\n - Notificación permanente</string>
    <string name="go_perm">Ir a los permisos</string>
    <string name="continue_">Continuar</string>
    <string name="unlock_freeuse_text">"Esta función pondrá el dispositivo en el estado de \"Tiempo Libre de Uso\". Para volver a tener las funciones de bloqueo activas se deberá desactivar la función desde el dispositivo tutor.\n\nEscribe la contraseña de tu cuenta para desbloquear el dispositivo:"</string>
</resources>